# bddstudio

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: portable-release.yml  test.yml
bddstudio/bdd/: manager.py
bddstudio/cli/: main.py
bddstudio/core/: expr.py  project.py
bddstudio/gui/: server.py
bddstudio/render/: dot.py
bddstudio/report/: report.py
docs/: DESIGN_DOCUMENT.md  FEATURES_LIMITATIONS_FUTURE.md  GUI_DESIGN_DOCUMENT.md  GUI_FEATURES_LIMITATIONS_FUTURE.md  GUI_FILE_LOADING_AND_DIAGRAM_SELECTION.md  GUI_USER_GUIDE.md  PUBLISHING_GUIDE.md  SIGNING_AND_DISTRIBUTION_GUIDE.md  STUDENT_PORTABLE_DOWNLOAD.md  STUDENT_QUICK_START.md  TRUE_INITIAL_BDD_FIX.md  USER_GUIDE.md
examples/: and3.yaml  mult_3x2.yaml  mux2.yaml  mux4.yaml  simple.yaml  xnor3.yaml  xnor4.yaml  xor3.yaml  xor4.yaml
packaging/: README_FIRST.txt  README_PORTABLE.md  make_portable_bundle.py
packaging/linux/: README_SIGNING.md  run-bddstudio.sh
packaging/macos/: BDD Studio.command  sign_and_notarize.sh
packaging/windows/: BDD Studio.bat  sign_windows.ps1
scripts/: build_macos_onefile.sh  publish_to_github.sh  student_setup_macos.sh
