[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bddstudio"
version = "0.6.0"
description = "Deterministic BDD/ROBDD CAD-style teaching tool with true initial BDD diagrams"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
bddstudio = "bddstudio.cli.main:main"
